# pacman-mirrorup

./: .kateproject  COPYING  Cargo.toml  Justfile  PKGBUILD  PKGBUILD.aur  PKGBUILD.local  README.adoc  README.md  mirrorup.service  pacman-mirrorup.service  pacman-mirrorup.timer
.github/workflows/: rust-clippy.yml  rust.yml
docs/: README-src.md
explore/: Justfile
src/: args.rs  errors.rs  exclude.rs  main.rs  mirror.rs  mirrors_status_json_test.raw
tests/: Justfile  excluded_mirrors  excluded_mirrors.conf  mirrorlist_header.regex  mirrors_status.json
