[package]
name = "pacman-mirrorup"
version = "1.0.2"

authors = ["Bhanupong Petchlert <bpetlert@gmail.com>"]

description = "A program to retrieve the best and latest Pacman mirror list based on user's geography"
documentation = "https://github.com/bpetlert/pacman-mirrorup"
homepage = "https://github.com/bpetlert/pacman-mirrorup"
license = "GPL-3.0-or-later"
readme = "README.adoc"
repository = "https://github.com/bpetlert/pacman-mirrorup"

edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.82"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
mimalloc = { version = "0.1.41", default-features = false }
once_cell = "1.19.0"
rayon = "1.10.0"
regex = "1.10.4"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tracing = { version = "0.1.40", features = [
  "max_level_debug",
  "release_max_level_debug",
] }
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "fmt",
], default-features = false }
ureq = { version = "2.9.7", features = ["json"] }
url = "2.5.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
