[package]
name = "pacman-mirrorup"
version = "1.0.3"

authors = ["Bhanupong Petchlert <bpetlert@gmail.com>"]

description = "A program to retrieve the best and latest Pacman mirror list based on user's geography"
documentation = "https://github.com/bpetlert/pacman-mirrorup"
homepage = "https://github.com/bpetlert/pacman-mirrorup"
license = "GPL-3.0-or-later"
readme = "README.adoc"
repository = "https://github.com/bpetlert/pacman-mirrorup"

edition = "2021"
publish = false

[dependencies]
anyhow = "~1"
chrono = { version = "~0.4", default-features = false, features = ["clock"] }
clap = { version = "~4.5", features = ["derive"] }
csv = "~1.3"
mimalloc = { version = "~0.1", default-features = false }
rayon = "~1.10"
regex = "~1"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
tracing = { version = "~0.1", features = [
  "max_level_debug",
  "release_max_level_debug",
] }
tracing-subscriber = { version = "~0.3", features = [
  "env-filter",
  "fmt",
], default-features = false }
ureq = { version = "~3", features = ["json"] }
url = "~2.5"

[dev-dependencies]
pretty_assertions = "~1"
