[package]
name = "pacman-mirrorup"
version = "1.1.0"
edition = "2024"
description = "A program to retrieve the best and latest Pacman mirror list based on user's geography"
documentation = "https://github.com/bpetlert/pacman-mirrorup"
readme = "README.adoc"
homepage = "https://github.com/bpetlert/pacman-mirrorup"
repository = "https://github.com/bpetlert/pacman-mirrorup"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
anyhow = "~1"
chrono = { version = "~0.4", default-features = false, features = ["clock"] }
clap = { version = "~4.5", features = ["derive"] }
csv = "~1"
mimalloc = { version = "~0.1", default-features = false }
rayon = "~1"
regex = "~1"
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
tracing = { version = "~0.1", features = [
  "max_level_debug",
  "release_max_level_debug",
] }
tracing-subscriber = { version = "~0.3", default-features = false, features = [
  "env-filter",
  "fmt",
] }
ureq = { version = "~3", features = ["json"] }
url = "~2.5"

[dev-dependencies]
pretty_assertions = "~1"
